--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Typed List Editor</title>
-    <link href="https://unpkg.com/datocms-plugins-sdk/dist/sdk.css" media="all" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <link href="main.css" media="all" rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <script src="https://unpkg.com/datocms-plugins-sdk"></script>
+  <link href="https://unpkg.com/datocms-plugins-sdk/dist/sdk.css" media="all" rel="stylesheet" />
 </head>
 <body>
-    <ul id="list"></ul>
-    <div class="inputField">
-        <label for="itemInput" class="inputLabel"><span>Add item</span></label>
-        <div class="inputLine">
-            <input id="itemInput" type="text" autocomplete="off" name="item_input" />
-            <div id="selectWrapper" style="display: none;">
-                <select id="optionSelect" name="option_select"></select>
-                <i class="select-icon fas fa-lg fa-chevron-down"></i>
-            </div>
-            <button id="addItemButton" class="DatoCMS-button">Add</button>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
-    <script src="https://unpkg.com/datocms-plugins-sdk"></script>
-    <script src="main.js"></script>
+    <select id="optionSelect" name="option_select">
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="opel">Opel</option>
+        <option value="audi">Audi</option>
+    </select>
+  <script type="text/javascript">
+    DatoCmsPlugin.init(function(plugin) {
+      const input = document.querySelector("select");
+
+      plugin.startAutoResizer()
+
+      input.value = plugin.getFieldValue(plugin.fieldPath);
+
+      plugin.addFieldChangeListener(plugin.fieldPath, function(newValue) {
+        input.value = newValue;
+      });
+
+      input.addEventListener("change", function(e) {
+        plugin.setFieldValue(plugin.fieldPath, e.target.value);
+      });
+    });
+  </script>
 </body>
 </html>
