--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         <select id="optionSelect" name="option_select">
         </select>
     </form>
+        <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
   <script type="text/javascript">
 
 function setFieldValue(plugin, value) {
