--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,24 @@
   <link href="https://unpkg.com/datocms-plugins-sdk/dist/sdk.css" media="all" rel="stylesheet" />
 </head>
 <body>
-    <form>
+    <!-- <form>
         <select id="optionSelect" name="option_select">
         </select>
-    </form>
-        <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
-  <script type="text/javascript">
+    </form> -->
+
+    <div class="inputLine">
+        <input id="itemInput" type="text" autocomplete="off" name="item_input" />
+        <div id="selectWrapper" style="display: none;">
+            <select id="optionSelect" name="option_select"></select>
+            <i class="select-icon fas fa-lg fa-chevron-down"></i>
+        </div>
+        <button id="addItemButton" class="DatoCMS-button">Add</button>
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
+    <script type="text/javascript">
 
     function deserializeValue(value) {
       if (!value) {
