--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,16 @@
         </select>
     </form> -->
 
-    <div class="inputLine">
-        <input id="itemInput" type="text" autocomplete="off" name="item_input" />
-        <div id="selectWrapper" style="display: none;">
-            <select id="optionSelect" name="option_select"></select>
-            <i class="select-icon fas fa-lg fa-chevron-down"></i>
+    <ul id="list"></ul>
+    <div class="inputField">
+        <label for="itemInput" class="inputLabel"><span>Add item</span></label>
+        <div class="inputLine">
+            <input id="itemInput" type="text" autocomplete="off" name="item_input" />
+            <div id="selectWrapper" style="display: none;">
+                <select id="optionSelect" name="option_select"></select>
+                <i class="select-icon fas fa-lg fa-chevron-down"></i>
+            </div>
         </div>
-        <button id="addItemButton" class="DatoCMS-button">Add</button>
     </div>
 
 
@@ -62,6 +65,8 @@
     }
 
     function showSelect(options, selectElm) {
+      inputElm.style.display = 'none';
+      selectWrapperElm.style.display = '';
         _.forEach([''].concat(options), option => {
             var optionElm = document.createElement('option');
             optionElm.name = option;
@@ -73,8 +78,10 @@
     DatoCmsPlugin.init(function(plugin) {
       const type = getFieldType(plugin);
       const options = getOptions(plugin);
-      const list = getFieldValue(plugin);
-      const select = document.querySelector("#optionSelect");
+      const inputElm = document.getElementById('itemInput');
+      const selectElm = document.getElementById('optionSelect');
+      const selectWrapperElm = document.getElementById('selectWrapper');
+      const listElm = document.getElementById('list');
 
       if (!_.isEmpty(options)) {
         showSelect(options, select);
