--- a/public/index.html
+++ b/public/index.html
@@ -141,16 +141,16 @@
         </select>
     </form> -->
 
-    <ul id="list"></ul>
+    <!-- <ul id="list"></ul> -->
     <div class="inputField">
-        <label for="itemInput" class="inputLabel"><span>Add item</span></label>
+        <label for="itemInput" class="inputLabel"><span>Select item</span></label>
         <div class="inputLine">
             <input id="itemInput" type="text" autocomplete="off" name="item_input" />
             <div id="selectWrapper" style="display: none;">
                 <select id="optionSelect" name="option_select"></select>
                 <i class="select-icon fas fa-lg fa-chevron-down"></i>
             </div>
-            <button id="addItemButton" class="DatoCMS-button">Add</button>
+            <!-- <button id="addItemButton" class="DatoCMS-button">Add</button> -->
         </div>
     </div>
 
