--- a/public/index.html
+++ b/public/index.html
@@ -136,12 +136,8 @@
   </style>
 </head>
 <body>
-    <!-- <form>
-        <select id="optionSelect" name="option_select">
-        </select>
-    </form> -->
 
-    <!-- <ul id="list"></ul> -->
+    <ul id="list" style="display:none"></ul>
     <div class="inputField">
         <label for="itemInput" class="inputLabel"><span>Select item</span></label>
         <div class="inputLine">
@@ -150,7 +146,6 @@
                 <select id="optionSelect" name="option_select"></select>
                 <i class="select-icon fas fa-lg fa-chevron-down"></i>
             </div>
-            <!-- <button id="addItemButton" class="DatoCMS-button">Add</button> -->
         </div>
     </div>
 
