--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
     }
 
     function showSelect(options, inputElm, selectElm, selectWrapperElm) {
-        // inputElm.style.display = 'none';
+        inputElm.style.display = 'none';
         selectWrapperElm.style.display = '';
         _.forEach([''].concat(options), option => {
             var optionElm = document.createElement('option');
@@ -211,9 +211,8 @@
         });
         if (_.isEmpty(list)) {
             listElm.style.display = 'none';
-          } else {
-            listElm.style.display = 'none';
-            // listElm.style.display = '';
+        } else {
+            listElm.style.display = '';
         }
     }
 
@@ -309,7 +308,8 @@
 
         selectElm.addEventListener("change", function(e) {
           plugin.setFieldValue(plugin.fieldPath, "[" + JSON.stringify(e.target.value) + "]");
-          // var formElement = _.isEmpty(options) ? inputElm : selectElm;
+          var formElement = _.isEmpty(options) ? inputElm : selectElm;
+          // addItem(formElement, list, listElm, plugin, type, options);
         });
 
         inputElm.addEventListener("keyup", function(event) {
